--- a/reactsite/package.json
+++ b/reactsite/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +12,14 @@
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "antd": "^5.12.1",
+    "axios": "^1.6.7",
+    "file-saver": "^2.0.5",
     "freekeys": "^0.0.4",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-intersection-observer": "^9.8.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "style-components": "^0.1.0",
