--- a/reactsite/package.json
+++ b/reactsite/package.json
@@ -2,6 +2,12 @@
   "name": "reactsite",
   "version": "0.1.0",
   "private": true,
+  "lint-staged": {
+    "./src/**/*.{js,json,jsx,ts,tsx,css}": [
+      "prettify",
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,11 +17,25 @@
     "@types/node": "^16.18.66",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "antd": "^5.12.1",
     "axios": "^1.6.7",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "file-saver": "^2.0.5",
     "freekeys": "^0.0.4",
     "jspdf": "^2.5.1",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
@@ -31,13 +51,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettify": "prettier --write './src/**/*.{js,json,jsx,ts,tsx,css}'"
   },
   "browserslist": {
     "production": [
