--- a/reactsite/package.json
+++ b/reactsite/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.3.8",
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +20,13 @@
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
     "antd": "^5.12.1",
     "axios": "^1.6.7",
+    "c8": "^9.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -33,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "file-saver": "^2.0.5",
     "freekeys": "^0.0.4",
+    "jsdom": "^24.0.0",
     "jspdf": "^2.5.1",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
@@ -45,15 +52,18 @@
     "style-components": "^0.1.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
+    "vitest": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prettify": "prettier --write './src/**/*.{js,json,jsx,ts,tsx,css}'"
+    "prettify": "prettier --write './src/**/*.{js,json,jsx,ts,tsx,css}'",
+    "test-coverage": "vitest --coverage",
+    "test-ui": "vitest --ui"
   },
   "browserslist": {
     "production": [
